upgrade example
