# examples/rewind_example/controllers/example.go
@@ -2,6 +2,7 @@ package controllers
 
 import (
 	"github.com/WeOps-Lab/rewind/lib/web/response"
+	"github.com/WeOps-Lab/rewind/lib/web/server"
 	"github.com/acmestack/gorm-plus/gplus"
 	"github.com/gofiber/contrib/fiberi18n/v2"
 	"github.com/gofiber/fiber/v2"
@@ -14,22 +15,20 @@ import (
 // @Accept json
 // @Produce json
 // @Success 200 {object} interface{}
-// @Router /api/v1/example/hello [get]
+// @Router /api/public/example/hello [get]
 func HelloWorld(c *fiber.Ctx) error {
 	helloMsg, _ := fiberi18n.Localize(c, "hello")
 
 	m := map[string]interface{}{}
 	m["hello"] = helloMsg
-	m["account"] = c.Locals("account")
-	m["displayName"] = c.Locals("displayName")
 	return c.JSON(m)
 }
 
 // @Tags Example
-// @Router /api/v1/example/list [get]
+// @Router /api/internal/example/list [get]
 // @Accept json
 // @Produce json
-// @Success 200 {object} entity.ExampleListEntity
+// @Success 200 {object} entity.ExampleListResponse
 func List(c *fiber.Ctx) error {
 	current, size, urlValues := response.ExtractPageParam(c)
 
@@ -37,109 +36,122 @@ func List(c *fiber.Ctx) error {
 		gplus.NewPage[models.Example](current, size),
 		gplus.BuildQuery[models.Example](urlValues))
 
-	responseData := entity.ExampleListEntity{
+	responseData := entity.ExampleListResponse{
 		PageEntity: response.PageEntity{
 			Current: pagerList.Current,
 			Size:    pagerList.Size,
 			Total:   pagerList.Total,
 		},
-		Items: []entity.ExampleWrapperEntity{},
+		Items: []entity.ExampleItemResponse{},
 	}
 
 	for _, target := range pagerList.Records {
-		responseData.Items = append(responseData.Items, entity.ExampleWrapperEntity{
-			ID: target.ID,
-			ExampleEntity: entity.ExampleEntity{
-				Name: target.Name,
-			},
+		responseData.Items = append(responseData.Items, entity.ExampleItemResponse{
+			ID:   target.ID,
+			Name: target.Name,
 		})
 	}
 
-	return c.JSON(responseData)
+	return c.Status(fiber.StatusOK).JSON(responseData)
 }
 
 // @Tags Example
 // @Param id path string true "id"
-// @Router /api/v1/example/{id} [get]
+// @Router /api/internal/example/{id} [get]
 // @Accept json
 // @Produce json
-// @Success 200 {object} entity.ExampleWrapperEntity
+// @Success 200 {object} entity.ExampleItemResponse
 func GetEntity(c *fiber.Ctx) error {
 	id := c.Params("id")
-
+	if id == "" {
+		return c.SendStatus(fiber.StatusBadRequest)
+	}
 	m, _ := gplus.SelectById[models.Example](id)
-	target := entity.ExampleWrapperEntity{
-		ID: m.ID,
-		ExampleEntity: entity.ExampleEntity{
-			Name: m.Name,
-		},
+	target := entity.ExampleItemResponse{
+		ID:   m.ID,
+		Name: m.Name,
 	}
 
-	return c.JSON(target)
+	return c.Status(fiber.StatusOK).JSON(target)
 }
 
 // @Tags Example
 // @Param id path string true "id"
-// @Router /api/v1/example/{id} [delete]
+// @Router /api/internal/example/{id} [delete]
 // @Accept json
 // @Produce json
 // @Success 200 {object} interface{}
 func DeleteEntity(c *fiber.Ctx) error {
 	id := c.Params("id")
+	if id == "" {
+		return c.SendStatus(fiber.StatusBadRequest)
+	}
 
 	err := gplus.DeleteById[models.Example](id).Error
 	if err != nil {
-		return c.SendStatus(http.StatusInternalServerError)
+		return c.SendStatus(fiber.StatusInternalServerError)
 	}
 
-	return c.SendStatus(http.StatusOK)
+	return c.SendStatus(fiber.StatusOK)
 }
 
 // @Tags Example
-// @Param req body entity.ExampleEntity true "entity"
-// @Router /api/v1/example [post]
+// @Param req body entity.ExampleCreateRequest true "entity"
+// @Router /api/internal/example [post]
 // @Accept json
 // @Produce json
 // @Success 200 {object} interface{}
 func CreateEntity(c *fiber.Ctx) error {
-	m := entity.ExampleEntity{}
+	m := entity.ExampleCreateRequest{}
 	if err := c.BodyParser(&m); err != nil {
 		return c.SendStatus(http.StatusBadRequest)
+	}
+
+	validate, msg := server.ValidateRequest(m)
+	if !validate {
+		return c.Status(fiber.StatusBadRequest).SendString(msg)
 	}
 
 	err := gplus.Insert[models.Example](&models.Example{
 		Name: m.Name,
 	}).Error
+
 	if err != nil {
-		return c.SendStatus(http.StatusBadRequest)
+		return c.SendStatus(fiber.StatusBadRequest)
 	}
 
-	return c.SendStatus(http.StatusOK)
+	return c.SendStatus(fiber.StatusOK)
 }
 
 // @Tags Example
 // @Produce json
-// @Param req body entity.ExampleWrapperEntity true "entity"
-// @Router /api/v1/example [put]
+// @Param req body entity.ExampleUpdateRequest true "entity"
+// @Router /api/internal/example [put]
 // @Accept json
 // @Produce json
 // @Success 200 {object} interface{}
 func UpdateEntity(c *fiber.Ctx) error {
-	m := entity.ExampleWrapperEntity{}
-	if err := c.BodyParser(&m); err != nil {
-		return c.JSON(
-			response.HTTPResponse(400, "", nil),
-		)
+	req := entity.ExampleUpdateRequest{}
+	if err := c.BodyParser(&req); err != nil {
+		return c.SendStatus(fiber.StatusBadRequest)
 	}
 
-	obj := &models.Example{Name: m.Name}
-	obj.ID = m.ID
-	err := gplus.UpdateById[models.Example](obj).Error
+	validate, msg := server.ValidateRequest(req)
+	if !validate {
+		return c.Status(fiber.StatusBadRequest).SendString(msg)
+	}
+	m, t := gplus.SelectById[models.Example](req.ID)
+	if t.Error != nil {
+		return c.Status(fiber.StatusNotFound).SendString(t.Error.Error())
+	}
+
+	m.Name = req.Name
+	err := gplus.UpdateById[models.Example](m).Error
 
 	if err != nil {
-		return c.SendStatus(http.StatusBadRequest)
+		return c.SendStatus(fiber.StatusInternalServerError)
 	}
 
-	return c.SendStatus(http.StatusOK)
+	return c.SendStatus(fiber.StatusOK)
 
 }
