# examples/rewind_example/docs/swagger.yaml
@@ -1,33 +1,45 @@
 definitions:
-  entity.ExampleEntity:
+  entity.ExampleCreateRequest:
     properties:
       name:
         type: string
+    required:
+    - name
     type: object
-  entity.ExampleListEntity:
-    properties:
-      current:
-        type: integer
-      items:
-        items:
-          $ref: '#/definitions/entity.ExampleWrapperEntity'
-        type: array
-      size:
-        type: integer
-      total:
-        type: integer
-    type: object
-  entity.ExampleWrapperEntity:
+  entity.ExampleItemResponse:
     properties:
       id:
         type: integer
       name:
         type: string
     type: object
+  entity.ExampleListResponse:
+    properties:
+      current:
+        type: integer
+      items:
+        items:
+          $ref: '#/definitions/entity.ExampleItemResponse'
+        type: array
+      size:
+        type: integer
+      total:
+        type: integer
+    type: object
+  entity.ExampleUpdateRequest:
+    properties:
+      id:
+        type: integer
+      name:
+        type: string
+    required:
+    - id
+    - name
+    type: object
 info:
   contact: {}
 paths:
-  /api/v1/example:
+  /api/internal/example:
     post:
       consumes:
       - application/json
@@ -37,7 +49,7 @@ paths:
         name: req
         required: true
         schema:
-          $ref: '#/definitions/entity.ExampleEntity'
+          $ref: '#/definitions/entity.ExampleCreateRequest'
       produces:
       - application/json
       responses:
@@ -55,7 +67,7 @@ paths:
         name: req
         required: true
         schema:
-          $ref: '#/definitions/entity.ExampleWrapperEntity'
+          $ref: '#/definitions/entity.ExampleUpdateRequest'
       produces:
       - application/json
       - application/json
@@ -65,7 +77,7 @@ paths:
           schema: {}
       tags:
       - Example
-  /api/v1/example/{id}:
+  /api/internal/example/{id}:
     delete:
       consumes:
       - application/json
@@ -98,22 +110,10 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/entity.ExampleWrapperEntity'
+            $ref: '#/definitions/entity.ExampleItemResponse'
       tags:
       - Example
-  /api/v1/example/hello:
-    get:
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema: {}
-      tags:
-      - Example
-  /api/v1/example/list:
+  /api/internal/example/list:
     get:
       consumes:
       - application/json
@@ -123,7 +123,19 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/entity.ExampleListEntity'
+            $ref: '#/definitions/entity.ExampleListResponse'
+      tags:
+      - Example
+  /api/public/example/hello:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema: {}
       tags:
       - Example
 swagger: "2.0"
