# examples/rewind_example/entity/example.go
@@ -4,16 +4,21 @@ import (
 	"github.com/WeOps-Lab/rewind/lib/web/response"
 )
 
-type ExampleEntity struct {
+type ExampleCreateRequest struct {
+	Name string `json:"name" validate:"required"`
+}
+
+type ExampleUpdateRequest struct {
+	ID   uint   `json:"id" validate:"required"`
+	Name string `json:"name" validate:"required"`
+}
+
+type ExampleItemResponse struct {
+	ID   uint   `json:"id"`
 	Name string `json:"name"`
 }
 
-type ExampleWrapperEntity struct {
-	ID uint `json:"id"`
-	ExampleEntity
-}
-
-type ExampleListEntity struct {
+type ExampleListResponse struct {
 	response.PageEntity
-	Items []ExampleWrapperEntity `json:"items"`
+	Items []ExampleItemResponse `json:"items"`
 }
