# examples/rewind_example/hooks/router.go
@@ -1,33 +1,20 @@
 package hooks
 
 import (
-	kc "github.com/WeOps-Lab/rewind/lib/pkgs/keycloak"
-	"github.com/WeOps-Lab/rewind/lib/web/middleware/keycloak"
 	"github.com/gofiber/fiber/v2"
-	"os"
 	"rewind_example/controllers"
 )
 
-func (e ExampleAppHooks) ExtendRouter(app *fiber.App) {
+func (e ExampleAppHooks) InstallInternalRouter(router fiber.Router) {
+	exampleGroup := router.Group("/example")
+	exampleGroup.Get("/list", controllers.List)
+	exampleGroup.Get("/:id", controllers.GetEntity)
+	exampleGroup.Delete("/:id", controllers.DeleteEntity)
+	exampleGroup.Post("/", controllers.CreateEntity)
+	exampleGroup.Put("/", controllers.UpdateEntity)
+}
 
-	kcClient := kc.NewKeyCloakBasicClient(
-		os.Getenv("KEYCLOAK_ENDPOINT"),
-		os.Getenv("KEYCLOAK_REALM"),
-		os.Getenv("KEYCLOAK_CLIENT_ID"),
-		os.Getenv("KEYCLOAK_CLIENT_SECRET"),
-	)
-
-	api := app.Group("/api")
-	v1 := api.Group("/v1")
-
-	example := v1.Group("/example")
-	example.Get("/hello", keycloak.KeycloakMiddleware(kcClient),
-		controllers.HelloWorld)
-
-	example.Get("/list", controllers.List)
-	example.Get("/:id", controllers.GetEntity)
-	example.Delete("/:id", controllers.DeleteEntity)
-	example.Post("/", controllers.CreateEntity)
-	example.Put("/", controllers.UpdateEntity)
-
+func (e ExampleAppHooks) InstallPublicRouter(router fiber.Router) {
+	exampleGroup := router.Group("/example")
+	exampleGroup.Get("/hello", controllers.HelloWorld)
 }
